--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx4G
 
 # BTA
 bta_version=7.1-pre1a
@@ -9,7 +9,10 @@ loader_version=0.14.19-babric.3-bta
 # HalpLibe
 halplibe_version=3.2.1
 
+# TerrainAPI
+terrain_api_version=1.4.2-7.1
+
 # Mod
-mod_version=1.0.0
-mod_group=turniplabs
-mod_name=examplemod
+mod_version=1.0.0-7.1
+mod_group=teamport
+mod_name=wasteland
